--- a/views/index.html
+++ b/views/index.html
@@ -2,29 +2,11 @@
 <html>
 
 <head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
-
-    <!-- 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> -->
-
-
-    <title>Home | feed India</title>
+    <title>HOME | FeedIndia</title>
     <link rel="shortcut icon" href="assets/logo.PNG" />
-    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Arimo|Grenze|Quicksand|Ubuntu&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Arimo|Grenze|Quicksand|Ubuntu|Hepta+Slab&display=swap" rel="stylesheet">
     <style type="text/css">
         body {
             background: linear-gradient(rgba(255, 255, 255, .5), rgba(255, 255, 255, .5)), url("assets/bread.jpg");
@@ -36,7 +18,7 @@
             width: 90%;
             margin-left: 5%;
             margin-right: 5%;
-            top: 14%;
+            top: 20%;
             font-family: 'Grenze', serif;
             color: #25a44d;
             text-align: center;
@@ -82,16 +64,27 @@
         }
         
         .nav-item:hover {
-            background: white;
+            background: black;
             border-radius: 6%;
-            color: black
+            color: white;
+        }
+        
+        footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background-color: black;
+            /* margin-top: 34vh; */
+            /* z-index: -2;
+    bottom: 0; */
         }
     </style>
 </head>
 
 <body>
-    <!-- <header>
-        <img style="height:100%;width:14%" src="assets/logo.png">
+    <!-- Image and text -->
+    <header>
+        <img style="height:100%;width:16%" src="assets/logo.png">
         <ul id="head_ul">
             <a href="/index">
                 <li class="head_li" style="background:white;color:black;">Home</li>
@@ -112,44 +105,14 @@
                 <li class="head_li">Login</li>
             </a>
         </ul>
-    </header> -->
-    <!-- <nav class="navbar navbar-inverse navbar-expand-lg">
-        <img class="navbar-brand" style="width:8%;height:80%" src="assets/logo.png">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="nav navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/index" class="active">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/donate">Donate</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/articles">Articles</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
-                </li>
-            </ul>
-
-        </div>
-    </nav> -->
-
-    <nav class="navbar navbar-inverse">
+    </header>
+    <!-- <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-            <ul class="nav navbar-nav">
-                <li class="nav-item">
-                    <img src="assets/logo.png" style="width:19%" alt="">
-                </li>
-            </ul>
+
+            <div class="navbar-brand">
+                <img src="assets/logo.png" style="width:19%" alt="">
+            </div>
+
             <ul class="nav navbar-nav" STYLE="float:right">
                 <li class="nav-item active">
                     <a class="nav-link" href="/index" class="active">Home</a>
@@ -171,7 +134,7 @@
                 </li>
             </ul>
         </div>
-    </nav>
+    </nav> -->
 
 
 
@@ -215,48 +178,20 @@
         </div>
     </footer> -->
     <!-- Footer -->
-    <footer class="footer fixed-bottom ">
+    <footer>
+        <div style="display: inline;">
 
-        <!-- Footer Elements -->
-        <div class="container bg-dark text-white">
-
-            <!-- Social buttons -->
-            <ul class="list-unstyled list-inline text-center">
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-fb mx-1">
-                        <i class="fa fa-facebook"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-tw mx-1">
-                        <i class="fa fa-twitter"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-gplus mx-1">
-                        <i class="fa fa-linkedin"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-li mx-1">
-                        <i class="fa fa-instagram"> </i>
-                    </a>
-                </li>
-            </ul>
-            <!-- Social buttons -->
-
+            <span style="padding-top:15px;padding-left:15px;float: left;">Feed India © 2019 Website Designed &
+                Maintenance
+                By SR Techies</span>
+            <div style="display: inline;float:right;margin-right: 30px;">
+                <a href="https://www.facebook.com/unitednations/" class="fa fa-facebook"></a>
+                <a href="https://twitter.com/UN?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="fa fa-twitter"></a>
+                <a href="https://in.linkedin.com/company/united-nations" class="fa fa-linkedin"></a>
+                <a href="https://www.instagram.com/unitednations" class="fa fa-instagram"></a>
+            </div>
         </div>
-        <!-- Footer Elements -->
-
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2018 Copyright:
-            <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
-        </div>
-        <!-- Copyright -->
-
     </footer>
-    <!-- Footer -->
-    <!-- Footer -->
 
 
     <script src="assets/js/script.js" type="text/javascript"></script>
